add sky cube functionality

--- a/kcwidrp/configs/kcwi.cfg
+++ b/kcwidrp/configs/kcwi.cfg
@@ -101,3 +101,6 @@ skipsine = False
 
 # Save bspline model parameters and breakpoints
 save_bspline_params = True
+
+# make sky cubes from sky model
+make_sky_cubes = False
