Added skipsky parameter to kcwi.cfg

--- a/kcwidrp/configs/kcwi.cfg
+++ b/kcwidrp/configs/kcwi.cfg
@@ -17,6 +17,7 @@ minoscanpix = 75
 oscanbuf = 20
 
 skipscat = False    # Skip subtracting scattered light?
+skipsky = False     # Skip sky subtraction?
 
 # interactive = 1
 plot_pause = 1
