DAR order fix and step by step DRP

--- a/kcwidrp/configs/kcwi.cfg
+++ b/kcwidrp/configs/kcwi.cfg
@@ -82,6 +82,8 @@ altitude = 4160
 enable_bokeh = True
 plot_level = 1
 
+DAR_shift_order = 3 #order used for DAR correction shift (CorrectDar.py), default = 3
+
 [BLUE]
 arc_min_nframes = 1
 contbars_min_nframes = 1
